--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
 	<link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-	<h1>holii ya estoy trabajando en mi proyecto por fis no me saquen T_T</h1>
-holiii estoy de vuelta 
+	<div class="container">
+		<h1>Text Encryptor</h1>
+		<textarea id="inputText" placeholder="Ingrese el texto aqui"></textarea>
+		<div class="buttons">
+			<button id="encryptBtn">Encriptar</button>
+			<button id="decryptBtn">Desencriptar</button>
+		</div>
+		<div id="outputArea">
+			<p id="outputText">Ningún mensaje fue encontrado</p>
+		</div>
+		<button id="copyBtn" style="display: none;">Copiar</button>
+	</div>
+	<footer>
+		<p>by MikeDev06</p>
+	</footer>
 	<script src="/scripts/main.js"></script>
 </body>
 </html>
