--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Aqui yo habia ponido mi primer proyecto</title>
-	<link rel="stylesheet" href="/styles/main.css">
-</head>
-<body>
-	<div class="container">
-		<h1>Text Encryptor</h1>
-		<textarea id="inputText" placeholder="Ingrese el texto aqui"></textarea>
-		<div class="buttons">
-			<button id="encryptBtn">Encriptar</button>
-			<button id="decryptBtn">Desencriptar</button>
-		</div>
-		<div id="outputArea">
-			<p id="outputText">Ningún mensaje fue encontrado</p>
-		</div>
-		<button id="copyBtn" style="display: none;">Copiar</button>
-	</div>
-	<footer>
-		<p>by MikeDev06</p>
-	</footer>
-	<script src="/scripts/main.js"></script>
-</body>
+<html lang="es">
+
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Text Encryptor</title>
+		<link rel="stylesheet" href="styles/main.css">
+	</head>
+
+	<body>
+		<header class="head-bar">
+			<img id="logo-img" src="./assets/img/logo.png" alt="logo">
+			<button id="themeToggle">Cambiar Tema</button>
+		</header>
+		<main class="input-container">
+			<div class="left-section">
+				<h1>Ingrese el texto aqui</h1>
+				<textarea id="inputText" placeholder="Ingrese el texto aqui"></textarea>
+				<div class="buttons">
+					<button id="encryptBtn">Encriptar</button>
+					<button id="decryptBtn">Desencriptar</button>
+				</div>
+				<p style="font-size: 12px; color: #0A3871;">Solo letras minúsculas y sin acentos</p>
+			</div>
+			<div class="right-section">
+				<div class="image-container">
+					<img src="image.png" alt="Ningún mensaje fue encontrado">
+					<p id="outputText">Ningún mensaje fue encontrado</p>
+				</div>
+			</div>
+		</main>
+		<footer>
+			<p>by MikeDev06</p>
+		</footer>
+		<script src="scripts/main.js"></script>
+	</body>
+
 </html>
