encryptor function working properly, missing styles yet and toggle for theme changer

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 				<div class="buttons">
 					<button id="encryptBtn">Encriptar</button>
 					<button id="decryptBtn">Desencriptar</button>
+					<button id="copyBtn" style="display: none;">Copiar</button>
 				</div>
 				<p style="font-size: 12px; color: #0A3871;">Solo letras minúsculas y sin acentos</p>
 			</div>
 			<div class="right-section">
-				<div class="image-container">
+				<div class="image-container" id="outputArea">
 					<img src="/assets/img/doll-encryptor.png" alt="Ningún mensaje fue encontrado">
 					<p id="outputText">Ningún mensaje fue encontrado</p>
 				</div>
