--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 			</div>
 		</header>
 		<main class="input-container">
-			<div class="left-section">
+
+			<aside class="left-section history">
+				<h2>Historial</h2>
+				<ul id="historyList">No hay mensajes en el historial</ul>
+			</aside>
+
+			<div class="hero-section">
 				<h1>Ingrese el texto aqui</h1>
 				<textarea id="inputText" placeholder="Ingrese el texto aqui"></textarea>
 				<div class="buttons">
@@ -32,15 +38,17 @@
 				<p style="font-size: 12px; color: #0A3871;">Ingresa el texto que deseas encriptar. Solo se permiten letras y
 					espacios.
 				</p>
-
 			</div>
-			<div class="right-section">
+
+			<aside class="right-section">
 				<div class="image-container" id="outputArea">
 					<img src="/assets/img/doll-encryptor.png" alt="Ningún mensaje fue encontrado">
 					<p id="outputText">Ningún mensaje fue encontrado</p>
 				</div>
-			</div>
+			</aside>
 		</main>
+
+		
 		<footer>
 			<p>by MikeDev06</p>
 		</footer>
